--- a/index.html
+++ b/index.html
@@ -86,6 +86,7 @@
   </aside>
   <main class="content">
     <div id="mount"></div>
+  <div style="text-align:center;margin-top:20px;font-size:12px;opacity:.7;">Made by Abishek</div>
   </main>
 </div>
 
